✨add route to add actions
