# services/advanced/AdvancedServices/Controllers/AreaController.cs
@@ -114,4 +114,20 @@ public class AreaController : ControllerBase
         
         return response.Item2 == ResultType.Fail ? Unauthorized(response.Item1) : Ok(response.Item1);
     }
+
+    [HttpPost("addservices")]
+    public async Task<IActionResult> AddAction([FromBody] AddActionRequest request)
+    {
+        _logger.LogInformation("AddActions event triggered");
+
+        var response = await _eventBus.PublishAsync<AddActionRequest, (string, ResultType)>(new AddActionRequest
+        {
+            ServiceId = request.ServiceId,
+            Name = request.Name,
+            TriggerConfig = request.TriggerConfig,
+            JwtToken = request.JwtToken
+        });
+        
+        return response.Item2 == ResultType.Fail ? Unauthorized(response.Item1) : Ok(response.Item1);
+    }
 }
